<resources>
    <string name="app_name">Kwizz</string>
    <string name="awesome_layout_intro_text">Awesome layout designs \n Cool Animations</string>
    <string name="awesome_layout_intro_subheading">Cheer up the regular \n boring quizzing pattern</string>
    <string name="welcome_text">Welcome</string>
    <string name="next_text">Next</string>
    <string name="share_layout_intro_text">Share Quiz Easily</string>
    <string name="share_layout_intro_subheading">Don’t limit your quiz.\nShare them and keep records</string>
    <string name="get_started_text">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_we_met_earlier_text">Remember ? We met earlier</string>
    <string name="e_mail_heading_text">E - mail</string>
    <string name="enter_your_e_mail_text">Enter Your E-Mail</string>
    <string name="password_text">Password</string>
    <string name="enter_your_password_text">Enter Your Password</string>
    <string name="forgot_password_text">Forgot Password ?</string>
    <string name="sign_in_text">Sign In</string>
    <string name="or_text">OR</string>
    <string name="sign_in_with_google_text">Sign In With Google</string>
    <string name="register_with_e_mail_text">Register With E-Mail</string>
    <string name="sign_in_with_e_mail_text">Sign In with E-Mail</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="let_s_get_a_new_start_text">Let\'s Get A New Start</string>
</resources>