<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.KwizzIntro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:text="@string/welcome_text"
        android:textColor="@color/blackFull"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="106dp"
        android:text="@string/let_s_get_a_new_start_text"
        android:textColor="@color/black25"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="182dp"
        android:text="@string/e_mail_heading_text"
        android:textColor="@color/blackFull"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/e_mail_edit_text_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_e_mail_text"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="287dp"
        android:text="@string/password_text"
        android:textColor="@color/blackFull"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_text_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_your_password_text"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_up_text"
        android:textAllCaps="false"
        android:textColor="@color/whiteFull"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="45dp"
        android:background="@color/black50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:background="@color/whiteFull"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/or_text"
        android:textColor="@color/blackFull"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="549dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/redFull"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in_with_google_text"
        android:textAllCaps="false"
        android:textColor="@color/whiteFull"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_google_sign_in"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="623dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/secondaryButtonBg"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in_with_e_mail_text"
        android:textAllCaps="false"
        android:textColor="@color/whiteFull"
        android:textSize="20sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_email"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>